# badchat

./: .gitignore  README.md
client/: CMakeLists.txt  CMakePresets.json  config.ini
client/src/: MessageTextEdit.h  adduseritem.cpp  adduseritem.h  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickablelabel.cpp  clickablelabel.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  clickedoncelabel.h  (+58 more)
client/style/: stylesheet.qss
server/: CMakeLists.txt  conanfile.py
server/VarifyServer/: Dockerfile  config.js  package-lock.json  package.json  redis.js  server.js
server/cmake/: common.cmake
server/common/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h  DistLock.cpp  DistLock.h  Singleton.h  const.h  data.h
server/conan/: PropertySheet-Conan.props
server/conan/profiles/: windows-msvc-2019  windows-msvc-2019-debug
server/config/: .env.example  chat1.ini  chat2.ini  gate.ini  resource.ini  status.ini
server/db/init/: qiqi.sql
server/deploy/: docker-compose.yml
server/proto/: CMakeLists.txt  message.proto
server/scripts/: conan-build-cmake.ps1  conan-clean.ps1  dev.ps1  run-all-cpp.ps1  run-cpp-server.ps1  sync-config.ps1
server/services/chat/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MsgNode.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h
server/services/gate/: CMakeLists.txt  CServer.cpp  CServer.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h
server/services/resource/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ConfigMgr.cpp  ConfigMgr.h  DownloadWorker.cpp  DownloadWorker.h  FileSystem.cpp  FileSystem.h  FileWorker.cpp  FileWorker.h  LogicWorker.cpp  MsgNode.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  ResourceServer.cpp  UserMgr.cpp  const.h
server/services/status/: CMakeLists.txt  ChatGrpcClient.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h
